[gd_scene load_steps=4 format=2]

[ext_resource path="res://scenes/casting/ReelinUISetup.gd" type="Script" id=1]
[ext_resource path="res://scenes/casting/ReelinViewport.gd" type="Script" id=2]
[ext_resource path="res://scenes/ui/ProgressBarLabeled.tscn" type="PackedScene" id=3]

[node name="UINode" type="Sprite3D"]
flip_v = true
billboard = 1
no_depth_test = true
script = ExtResource( 1 )

[node name="Viewport" type="Viewport" parent="."]
size = Vector2( 1024, 600 )
transparent_bg = true
handle_input_locally = false
disable_3d = true
render_target_update_mode = 3
script = ExtResource( 2 )

[node name="CatchProgress" parent="Viewport" instance=ExtResource( 3 )]
margin_left = 215.0
margin_top = 276.0
margin_right = 315.0
margin_bottom = 306.0
text = "catch o meter"

[node name="LineProgress" parent="Viewport" instance=ExtResource( 3 )]
margin_left = 767.0
margin_top = 276.0
margin_right = 867.0
margin_bottom = 306.0
text = "line integrity"

[node name="TimeProgress" parent="Viewport" instance=ExtResource( 3 )]
margin_left = 735.0
margin_top = 332.0
margin_right = 835.0
margin_bottom = 362.0
text = "time left"
